--- a/app/templates/load/create3.html
+++ b/app/templates/load/create3.html
@@ -39,7 +39,7 @@
 									<small>Location Pick/Drop Details</small> </span>
 							</a>
 						</li>
-						<li>
+						{#<li>
 							<a href="#step-4">
 								<div class="stepNumber">
 									4
@@ -48,7 +48,7 @@
 									<br />
 									<small>Assign a Truck</small> </span>
 							</a>
-						</li>
+						</li>#}
 					</ul>
 					<div class="progress progress-striped active progress-sm">
 						<div aria-valuemax="100" aria-valuemin="0" role="progressbar" class="progress-bar progress-bar-success step-bar">
@@ -214,16 +214,16 @@
 								</button>
 							</div>
 							<div class="col-sm-2 col-sm-offset-3">
-								<button class="btn btn-blue next-step btn-block">
+								{#<button class="btn btn-blue next-step btn-block">
 									Next <i class="fa fa-arrow-circle-right"></i>
-								</button>
+								</button>#}
 								<button type="submit" class="btn btn-success finish-step btn-block">
 									Finish <i class="fa fa-arrow-circle-right"></i>
 								</button>
 							</div>
 						</div>
 					</div>
-					<div id="step-4">
+					{#<div id="step-4">
 						<h2 class="StepTitle">Step 4 Content</h2>
 						
 						<div class="form-group">
@@ -246,7 +246,7 @@
 								</button>
 							</div>
 						</div>
-					</div>
+					</div>#}
 				</div>
 			</form>
 			<!-- end: FORM WIZARD PANEL -->
@@ -431,7 +431,11 @@
 				}
 				$('#sample_2 tbody tr').each(function(i) {
 					//alert(i);
+
 					if($('#wrapper-' + i).length) {
+						if($('#locations-' + i + '-retired').val() == "1") {
+							$('#wrapper-' + i).hide();
+						}
 						if($('#locations-' + i + '-stop_type').val() != "Pickup") {
 							$('.locations-' + i +'-bol').each(function(index) {
 								$('.locations-' + i + '-BOLs-' + index + '-hide-details').hide();
@@ -466,7 +470,7 @@
 							});
 						}
 					}
-					else {
+					else if(!$(this).is(':hidden'))	{
 						var newRow = $('#location-template').html().replace(/__LOC_INDEX__/g, i);
 						//get template, replace applicable indexes
 						
@@ -533,7 +537,6 @@
 		   			$(this).closest('.bol-wrapper').hide();
 		   			$(this).find('.retire-bol-input').val("1");
 		   		} else if ($(this).find('.bol_id').val() > hiddenID) {
-		   			//alert('hi');
 		   			var thisID = $(this).find('.bol_id').val();
 		   			$(this).find('.bol-header').text('BOL #' + (thisID - 1));
 		   			$(this).find('.bol_id').val(thisID - 1);
