--- a/app/templates/load/create3.html
+++ b/app/templates/load/create3.html
@@ -272,7 +272,7 @@
 															Contact Name <span class="symbol required"></span>
 														</label>
 														<div class="col-sm-7">
-															<input type="text" id="locations-__LOC_INDEX__-contact_name" name="locations-__LOC_INDEX__-contact_name" class="form-control" value="">
+															<input type="text" id="locations-__LOC_INDEX__-contact_name" name="locations-__LOC_INDEX__-contact_name" class="form-control" value="" data-rule-required="true">
 														</div>
 													</div>
 													<div class="form-group">
@@ -280,7 +280,7 @@
 															Contact Phone <span class="symbol required"></span>
 														</label>
 														<div class="col-sm-7">
-															<input type="text" id="locations-__LOC_INDEX__-contact_phone" name="locations-__LOC_INDEX__-contact_phone" class="form-control input-mask-phone" value="">
+															<input type="text" id="locations-__LOC_INDEX__-contact_phone" name="locations-__LOC_INDEX__-contact_phone" class="form-control input-mask-phone" value="" data-rule-required="true">
 														</div>
 													</div>
 												</div>
