--- a/app/templates/load/edit3.html
+++ b/app/templates/load/edit3.html
@@ -226,7 +226,7 @@
 												<div class="panel panel-default">
 													<div class="panel-heading">
 														<i class="clip-menu"></i>
-														<span id="locations-{{ loop.index - 1 }}-address">	</span>
+														<span id="locations-{{ loop.index - 1 }}-address">{{ location.city.data }}, {{ location.state.data }} {{ location.postal_code.data }}	</span>
 													</div>
 													<div class="panel-body">
 														<div class="row">
