--- a/app/templates/load/create3.html
+++ b/app/templates/load/create3.html
@@ -14,9 +14,9 @@
 								<div class="stepNumber">
 									1
 								</div>
-								<span class="stepDesc"> General Info
+								<span class="stepDesc"> Load Details
 									<br />
-									<small>Input Basic Load Details</small> </span>
+									<small>General Information</small> </span>
 							</a>
 						</li>
 						<li>
@@ -24,9 +24,9 @@
 								<div class="stepNumber">
 									2
 								</div>
-								<span class="stepDesc"> Plan Route
+								<span class="stepDesc"> Location Details
 									<br />
-									<small>Location Pick/Drop Details</small> </span>
+									<small>Input Picks &amp; Drops</small> </span>
 							</a>
 						</li>
 						<li>
@@ -34,9 +34,9 @@
 								<div class="stepNumber">
 									3
 								</div>
-								<span class="stepDesc"> Pick/Drop Info
+								<span class="stepDesc"> Shipment Details
 									<br />
-									<small>Location Pick/Drop Details</small> </span>
+									<small>Location &amp; BOL Details</small> </span>
 							</a>
 						</li>
 						{#<li>
@@ -56,7 +56,7 @@
 						</div>
 					</div>
 					<div id="step-1">
-						<h2 class="StepTitle">Step 1 Content</h2>
+						<h2 class="StepTitle">Load Details</h2>
 						<div class="form-group">
 							<label class="col-sm-3 control-label">
 								Load # <span class="symbol required"></span>
@@ -160,7 +160,7 @@
 						</div>
 					</div>
 					<div id="step-2">
-						<h2 class="StepTitle">Step 2 Content</h2>
+						<h2 class="StepTitle">Location Details</h2>
 						<div class="row">
 							<div class="col-md-12 space20">
 								<button class="btn btn-green add-row">
@@ -201,7 +201,7 @@
 						</div>
 					</div>
 					<div id="step-3">
-						<h2 class="StepTitle">Step 3 Title</h2>
+						<h2 class="StepTitle">Shipment Details</h2>
 						<div class="container">
 							<div id="location-container">
 							</div>
