--- a/app/templates/load/edit3.html
+++ b/app/templates/load/edit3.html
@@ -223,7 +223,7 @@
 										
 										<div class="row bol-0-info">
 											<div clas="col-sm-12">
-												<div class="panel panel-default">
+												<div class="well">
 													<div class="panel-heading">
 														<i class="clip-menu"></i>
 														<span id="locations-{{ loop.index - 1 }}-address">{{ location.city.data }}, {{ location.state.data }} {{ location.postal_code.data }}	</span>
@@ -435,7 +435,7 @@
 															</div>
 														</div>
 														<div class="row text-center">
-															<button class="btn btn-primary add_button" id="{{ loop.index - 1 }}">Add Another BOL</button>
+															<button class="btn btn-primary add_button" id="{{ loop.index - 1 }}">Add BOL</button>
 														</div>
 													</div>
 												</div>
@@ -544,7 +544,7 @@
 										</div>
 									</div>
 									<div class="row text-center">
-										<button class="btn btn-primary" id="__LOC_INDEX__">Add Another BOL</button>
+										<button class="btn btn-primary" id="__LOC_INDEX__">Add BOL</button>
 									</div>
 								</div>
 							</div>
@@ -718,8 +718,8 @@
 						$('#location-container').append(newRow);
 
 						// add bol to location
-						var newBOL = $('#bol-pickup-template').html().replace(/__LOC_INDEX__/g, i).replace(/__BOL_INDEX__/g, 0).replace(/__BOL_NUMBER__/g, 1);
-						$('#locations-' + i + '-bol-wrapper').append(newBOL);
+						{#var newBOL = $('#bol-pickup-template').html().replace(/__LOC_INDEX__/g, i).replace(/__BOL_INDEX__/g, 0).replace(/__BOL_NUMBER__/g, 1);
+						$('#locations-' + i + '-bol-wrapper').append(newBOL);#}
 						$('#' + i).addClass('add_button');
 						if($('#locations-' + i + '-stop_type').val() != "Pickup") {
 							$('.locations-' + i + '-BOLs-0-hide-details').hide();
