--- a/app/templates/load/create3.html
+++ b/app/templates/load/create3.html
@@ -409,7 +409,7 @@
 		<script src="{{ static('backend/plugins/jquery-validation/dist/jquery.validate.min.js') }}"></script>
 		<script src="{{ static('backend/plugins/jQuery-Smart-Wizard/js/jquery.smartWizard.js') }}"></script>
 		<script src="{{ static('backend/js/load-wizard.js') }}"></script>
-		<script type="text/javascript" src="{{ static('backend/plugins/DataTables/media/js/jquery.dataTables.min.js') }}"></script>
+		<script type="text/javascript" src="{{ static('backend/plugins/DataTables/media/js/jquery.dataTables.js') }}"></script>
 		<script type="text/javascript" src="{{ static('backend/plugins/DataTables/media/js/DT_bootstrap.js') }}"></script>
 		<script src="{{ static('backend/js/table-data.js') }}"></script>
 		<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
